<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:background="@color/background"
   android:padding="4dp">

   <androidx.cardview.widget.CardView
      android:id="@+id/cvheading"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      app:cardCornerRadius="@dimen/_4sdp"
      app:cardPreventCornerOverlap="true"
      app:cardUseCompatPadding="true">

      <EditText
         android:id="@+id/survey_heading"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_40sdp"
         android:background="@drawable/white_bg"
         android:hint="Heading"
         android:inputType="textCapWords"
         android:padding="@dimen/_5sdp" />

   </androidx.cardview.widget.CardView>

   <androidx.cardview.widget.CardView
      android:id="@+id/cvdesc"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/cvheading"
      app:cardCornerRadius="@dimen/_4sdp"
      app:cardPreventCornerOverlap="true"
      app:cardUseCompatPadding="true">

      <EditText
         android:id="@+id/survey_description"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_70sdp"
         android:background="@drawable/white_bg"
         android:hint="Description"
         android:inputType="textCapSentences"
         android:padding="@dimen/_4sdp" />

   </androidx.cardview.widget.CardView>

   <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_below="@id/cvdesc"
      android:layout_marginTop="@dimen/_8sdp"
      android:background="@color/headingText" />


   <RelativeLayout
      android:id="@+id/ll2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/cvdesc"
      android:layout_marginStart="@dimen/_4sdp"
      android:layout_marginTop="@dimen/_20sdp"
      android:layout_marginEnd="@dimen/_4sdp"
      android:background="@color/background"
      android:orientation="horizontal"
      android:padding="@dimen/_4sdp">

      <RelativeLayout
         android:id="@+id/rl1"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_marginStart="10dp">

         <ImageView
            android:id="@+id/likeImg"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_55sdp"
            android:src="@drawable/like_green" />

         <TextView
            android:id="@+id/like_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/likeImg"
            android:fontFamily="sans-serif-condensed"
            android:text="Yes"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold" />
      </RelativeLayout>

      <RelativeLayout
         android:id="@+id/rl2"
         android:layout_width="@dimen/_50sdp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/_20sdp"
         android:layout_toEndOf="@id/rl1"
         android:orientation="vertical">

         <ImageView
            android:id="@+id/dislikeImg"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_55sdp"
            android:src="@drawable/dislike_red" />

         <TextView
            android:id="@+id/dislike_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dislikeImg"
            android:layout_alignEnd="@id/dislikeImg"
            android:fontFamily="sans-serif-condensed"
            android:text="No"
            android:textAlignment="center"
            android:textColor="@color/Red"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold" />

      </RelativeLayout>

      <RelativeLayout
         android:layout_width="@dimen/_55sdp"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="@dimen/_20sdp">

         <ImageView
            android:id="@+id/sayImg"
            android:layout_width="@dimen/_55sdp"
            android:layout_height="@dimen/_55sdp"
            android:src="@drawable/cant_say" />

         <TextView
            android:id="@+id/say_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sayImg"
            android:fontFamily="sans-serif-condensed"
            android:text="Can't Say"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold" />
      </RelativeLayout>

   </RelativeLayout>


   <androidx.cardview.widget.CardView
      android:id="@+id/cvwut"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/ll2"
      android:layout_marginTop="@dimen/_5sdp"
      app:cardBackgroundColor="@color/background"
      app:cardCornerRadius="@dimen/_4sdp"
      app:cardPreventCornerOverlap="true"
      app:cardUseCompatPadding="true">

      <EditText
         android:id="@+id/survey_wut"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_80sdp"
         android:background="@drawable/white_bg"
         android:enabled="false"
         android:hint="@string/survey_hint"
         android:inputType="textCapSentences"
         android:padding="@dimen/_5sdp" />

   </androidx.cardview.widget.CardView>

   <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_below="@id/cvwut"
      android:layout_marginTop="@dimen/_8sdp"
      android:background="@color/subHeadingText" />


   <CheckBox
      android:id="@+id/inc_yn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/cvwut"
      android:layout_alignParentStart="true"
      android:layout_marginTop="@dimen/_10sdp"
      android:fontFamily="sans-serif-condensed"
      android:text="@string/yesNoButton"
      android:textColor="@color/headingText" />

   <CheckBox
      android:id="@+id/inc_say"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/inc_yn"
      android:layout_alignParentStart="true"
      android:fontFamily="sans-serif-condensed"
      android:text="@string/cantSayButton"
      android:textColor="@color/headingText" />

   <CheckBox
      android:id="@+id/inc_field"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/inc_say"
      android:layout_alignParentStart="true"
      android:fontFamily="sans-serif-condensed"
      android:text="@string/wut_field"
      android:textColor="@color/headingText" />

   <CheckBox
      android:id="@+id/field_necessary"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/inc_field"
      android:layout_alignParentStart="true"
      android:fontFamily="sans-serif-condensed"
      android:text="@string/wut_nec"
      android:textColor="@color/headingText" />

   <Button
      android:id="@+id/submit"
      android:layout_width="@dimen/_130sdp"
      android:layout_height="wrap_content"
      android:text="Submit"
      android:layout_alignParentBottom="true"
      android:layout_centerHorizontal="true"
      android:layout_marginBottom="20dp"
      android:paddingStart="@dimen/_25sdp"
      android:drawablePadding="@dimen/_minus10sdp"
      android:textColor="@color/white"
      android:drawableStart="@drawable/send"
      android:background="@drawable/green_bg"/>




</RelativeLayout>